--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="square">
-        <div class="box"></div>
+    <div class="block">
+        <div class="square"></div>
     </div>
 </body>
 </html>
